--- a/springboot-user-rest-service/src/main/resources/application.properties
+++ b/springboot-user-rest-service/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+sentiment.moderate=true
