--- a/springboot-user-rest-service/src/main/resources/application.properties
+++ b/springboot-user-rest-service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 sentiment.moderate=true
+resilience4j.retry.instances.sentiment-api.maxRetryAttempts=3
+resilience4j.retry.instances.sentiment-api.waitDuration=5s
