--- a/springboot-user-rest-service/pom.xml
+++ b/springboot-user-rest-service/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.comparision</groupId>
-	<artifactId>userpost</artifactId>
+	<artifactId>social-media</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>userpost</name>
+	<name>social-media</name>
 	<description>Demo project for Spring Boot which stores user posts</description>
 	<properties>
 		<java.version>17</java.version>
@@ -73,8 +73,18 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.graalvm.buildtools</groupId>
+				<artifactId>native-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<name>shafreen/springboot-${project.artifactId}:${project.version}</name>
+					</image>
+					<pullPolicy>IF_NOT_PRESENT</pullPolicy>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
