--- a/springboot-user-rest-service/src/main/resources/application.properties
+++ b/springboot-user-rest-service/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
+spring.datasource.username=social-media-user
+spring.datasource.password=dummypassword
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 sentiment.moderate=true
