--- a/ballerina-user-rest-service/Ballerina.toml
+++ b/ballerina-user-rest-service/Ballerina.toml
@@ -7,7 +7,7 @@ distribution = "2201.3.1"
 [build-options]
 observabilityIncluded = true
 
-[[platform.java11.dependency]]
-artifactId = "h2"
-version = "2.0.206"
-groupId = "com.h2database"
+# [[platform.java11.dependency]]
+# artifactId = "h2"
+# version = "2.0.206"
+# groupId = "com.h2database"
