--- a/ballerina-user-rest-service/Config.toml
+++ b/ballerina-user-rest-service/Config.toml
@@ -3,3 +3,10 @@ database_user = "social_media_user"
 database_password = "dummypassword"
 host = "localhost"
 port = 3306
+
+[ballerina.observe]
+tracingEnabled=true
+tracingProvider="jaeger"
+
+[ballerinax.jaeger]
+samplerParam=1.0
