--- a/springboot-user-rest-service/src/main/resources/application.properties
+++ b/springboot-user-rest-service/src/main/resources/application.properties
@@ -1,14 +1,19 @@
-spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:testdb
-
 spring.datasource.url=jdbc:mysql://localhost:3306/social_media_database
 spring.datasource.username=social_media_user
 spring.datasource.password=dummypassword
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+management.tracing.enabled=true
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+logging.pattern.level=trace_id=%mdc{traceId} span_id=%mdc{spanId} trace_flags=%mdc{traceFlags} %p
+feign.metrics.enabled=true
+
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
+
 sentiment.moderate=true
+
 resilience4j.retry.instances.sentiment-api.maxRetryAttempts=3
 resilience4j.retry.instances.sentiment-api.waitDuration=5s
