--- a/springboot-user-rest-service/src/main/resources/application.properties
+++ b/springboot-user-rest-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8087
+
 spring.datasource.url=jdbc:mysql://localhost:3306/social_media_database
 spring.datasource.username=social_media_user
 spring.datasource.password=dummypassword
