--- a/ballerina-user-rest-service/Cloud.toml
+++ b/ballerina-user-rest-service/Cloud.toml
@@ -2,3 +2,7 @@
 repository="shafreen"
 name="ballerina-social-media"
 tag="0.0.1"
+
+[[container.copy.files]]
+sourceFile="./Config.toml"
+target="./Config.toml"
